--- a/style.css
+++ b/style.css
@@ -1153,12 +1153,9 @@ mark {
 
 .gun-imag1{
     display: flex;
-    grid-area: 4 / 6 / 15 / 10;
+    grid-area: 6 / 6 / 15 / 10;
     flex-direction: column;
     align-items: center;
-}
-.gun-imag1 img{
-    height: 250px;
 }
 .gun-imag1 p{
     color: #fff;
@@ -1168,13 +1165,13 @@ mark {
 
 .gun-imag2{
     display: flex;
-    grid-area: 4 / 11 / 15 / 15;
+    grid-area: 6/ 11 / 15 / 15;
     flex-direction: column;
     align-items: center;
 
 }
-.gun-imag2 img{
-    height: 250px;
+.gun-imag2 img , .gun-imag1 img{
+    height: 200px;
 }
 
 .gun-imag2 p{
@@ -1195,9 +1192,13 @@ mark {
 }
 
 .change-char{
-    grid-area: 12 / 12/ 13 / 15;
+    grid-area: 12/ 11/ 13 / 14;
 }
 
 .yes-btn{
-    grid-area: 12 / 8 /13 / 11;
+    grid-area: 12/ 7 /13/ 10;
+}
+
+.text-conf{
+    grid-area: 4/ 6  / 15 / 15;
 }
